--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <header>
       <h1 id="title">Adivinhe a cor!</h1>
+      <p id="rgb-color"></p>
     </header>
+    <script src="script.js"></script>
   </body>
 </html>
