--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main id="color-options">
       <p id="rgb-color"></p>
     </main>
+    <button id="reset-game">Iniciar/Reiniciar o jogo</button>
     <script src="script.js"></script>
   </body>
 </html>
