--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
     <main id="color-options">
       <p id="rgb-color"></p>
+      <p id="score"></p>
     </main>
     <button id="reset-game">Iniciar/Reiniciar o jogo</button>
     <script src="script.js"></script>
